test_regress/t/t_case_enum_incomplete_bad.out
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_bad.v:21:12: 3 enum items not covered by case:
                                                             : 'S1' (defined at t/t_case_enum_incomplete_bad.v:11:5)
                                                             : 'S3' (defined at t/t_case_enum_incomplete_bad.v:13:5)
                                                             : 'S4' (defined at t/t_case_enum_incomplete_bad.v:14:5)
   21 |     unique case (state)
      |            ^~~~
                         ... For warning description see https://verilator.org/warn/CASEINCOMPLETE?v=latest
                         ... Use "/* verilator lint_off CASEINCOMPLETE */" and lint_on around source to disable this message.
%Error: Exiting due to
